# qa_guru_14_16

./: README.md  pyproject.toml  requirements.txt
